# souprune_undertale_preset

./: .gitignore  global.fre.ron  mod.toml  readme.md  readme_zh-hans.md  undertale_preset.wasm
content/: Cargo.toml  build.rs
content/ron/app/: flow.ron
content/ron/narrative/: dialogue.fre.ron
content/ron/overworld/: chase_config.ron
content/ron/view/: touch_layout.ron
content/src/: lib.rs  static_assets.rs  support.rs
content/src/app/: flow.rs  global.rs  input.rs
content/src/narrative/: dialogue.rs  dialogue_rules.rs
content/src/overworld/: chase_config.rs
content/src/static_assets/: actors_items_basic_items_ron.rs  app_flow_ron.rs  app_global_fre_ron.rs  app_input_ron.rs  battle_common_end_view_interaction_sequence_ron.rs  battle_common_enemy_turn_sequence_ron.rs  battle_common_fight_target_sequence_ron.rs  battle_common_narration_sequence_ron.rs  battle_common_player_turn_sequence_ron.rs  battle_common_show_narration_sequence_ron.rs  battle_mercy_end_sequence_ron.rs  battle_mercy_spare_sequence_ron.rs  battle_players_player_battle_player_ron.rs  battle_rules_dialogue_stop_fre_ron.rs  battle_rules_dialogue_test_fre_ron.rs  battle_rules_fight_hit_fre_ron.rs  battle_rules_menu_cancel_fre_ron.rs  battle_rules_menu_confirm_fre_ron.rs  battle_rules_menu_navigation_fre_ron.rs  battle_templates_undertale_battle_sequence_ron.rs  battle_view_undertale_view_ron.rs  narrative_dialogue_fre_ron.rs  narrative_dialogue_ron.rs  overworld_characters_frisk_animations_animation_config_ron.rs  overworld_characters_frisk_character_ron.rs  overworld_chase_config_ron.rs  (+10 more)
(+151 files in other folders)
